tests/04-invalid-arity.stderr
error: Relation 'Fib' was declared with arity 2, but constructed with arity 3 here.
  --> $DIR/04-invalid-arity.rs:10:9
   |
10 |         Fib(0, 0, 2) <- (true);
   |         ^^^
